# fw-template-revision

./: .gitignore  ChangeLog  README  bootstrap  configure.ac.local
fw-pkgin/: config
fw.local/m4/: Makefile.am
fw.local/template/: .gitignore
fw.local/template/fw-revision/: Makefile.am.local
fw.local/template/fw-revision/fw.local/: Makefile.am
fw.local/template/fw-revision/fw.local/revision/: Makefile.am
fw.local/template/fw-revision/fw.local/revision/NAME/: Makefile.am
fw.local/template/fw-revision/tests/: Makefile.am
tests/: .gitignore  test-template.in
